# MCP-Agent

./: .dockerignore  .env.example  .gitignore  README.md  architecture.md  context.md  deployment-plan.md  edge-case.md  implementation-plan.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: weekly-pulse.yml
config/: run_config.example.yaml  run_config.prod.yaml
data/samples/: app_store.csv  play_store.json
review_pulse/: __init__.py  config.py  models.py  orchestrator.py
review_pulse/delivery/: __init__.py  deliver.py  docs_client.py  errors.py  gmail_client.py  mcp_client.py
review_pulse/llm/: __init__.py  client.py
review_pulse/pipeline/: __init__.py  normalize.py  pii.py  render.py  summarize.py  textstats.py  theming.py  validators.py
review_pulse/sources/: __init__.py  app_store.py  base.py  download.py  play_store.py
review_pulse/store/: __init__.py  local_store.py
scripts/: inspect_other.py  inspect_themes.py  railway_set_vars.ps1  verify_phase4.py
tests/: test_delivery.py  test_e2e_constraints.py  test_filters.py  test_ingestion.py  test_orchestrator.py  test_pii.py  test_render.py  test_summarize.py  test_theming.py
