[project]
name = "review-pulse"
version = "0.1.0"
description = "Turn public mobile-store reviews into a weekly one-page pulse (Google Docs + Gmail draft via MCP)."
requires-python = ">=3.10"
dependencies = [
    "groq>=0.11.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "google-play-scraper>=1.2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.scripts]
review-pulse = "review_pulse.orchestrator:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["review_pulse*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
